# WarpScanner

./: FixResult.py  FixResult.sh  README.en.md  README.ja.md  README.md  README.tr.md  README.zh-CN.md  WarpScanner.py  install.sh  pyproject.toml
.github/workflows/: readme.yml
Linux/: warpscanner-v4.1.0.py
windows/: NewVersion.txt  WarpScanner-v0.1.0.py  WarpScanner-v0.1.1.py  WarpScanner-v0.1.2.py  WarpScanner-v0.1.3.py  WarpScanner-v0.2.0.py  WarpScanner-v0.2.1.py  WarpScanner-v0.2.2.py  WarpScanner-v0.3.0.py  WarpScanner-v0.3.5.py  WarpScanner-v0.3.6.py  WarpScanner-v0.3.7.py  WarpScanner-v0.3.8.py  WarpScanner-v0.3.9.py  WarpScanner-v0.4.0.py  WarpScanner-v0.4.1.py  WarpScanner-v0.4.2.py  WarpScanner-v0.4.4.py  WarpScanner-v0.4.5.py  WarpScanner-v0.4.6.py  WarpScanner-v0.4.7.py  WarpScanner-v0.4.8.py  WarpScanner-v0.4.9.5.py  WarpScanner-v0.4.9.py  WarpScanner-v0.5.0.py  WarpScanner-v0.5.1.py  WarpScanner-v0.5.2.py  WarpScanner-v0.5.3.py  WarpScanner.py  requirements.txt
