[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_v2ray"
version = "0.1.2"
description = "A powerful, high-level Python wrapper for managing and testing V2Ray/Xray-core and Hysteria clients."
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [
  { name="arshiacomplus", email="arshiacomplus@gmail.com" },
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "grpcio>=1.40.0",
    "protobuf>=3.19.0",
]


classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: System :: Networking",
]

[tool.setuptools]
packages = ["python_v2ray"]

[tool.setuptools.package-data]
python_v2ray = ["vendor/*", "core_engine/*", "protos/**/*"]
